objects/Gross_Margin__c.object
<CustomObject>
    <fields>
        <fullName>Effective_End_Date__c</fullName>
        <description>Gross Margin Effective End Date</description>
        <inlineHelpText>Gross Margin Effective End Date</inlineHelpText>
        <label>Effective End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Start_Date__c</fullName>
        <description>Gross Margin Effective Start Date</description>
        <inlineHelpText>Gross Margin Effective Start Date</inlineHelpText>
        <label>Effective Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gross_Margin__c</fullName>
        <description>Gross Margin Percentage</description>
        <inlineHelpText>Gross Margin Percentage</inlineHelpText>
        <label>CGM Cost %</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Family_And_Product_Type__c</fullName>
        <formula>TEXT(Product_Family__c) + '-' + TEXT(Product_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Family And Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <description>Product Family</description>
        <inlineHelpText>Product Family</inlineHelpText>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACM</fullName>
                </value>
                <value>
                    <fullName>ACM - Client</fullName>
                </value>
                <value>
                    <fullName>ACM - Hosted</fullName>
                </value>
                <value>
                    <fullName>ACR</fullName>
                </value>
                <value>
                    <fullName>ACTIVE Exchange</fullName>
                </value>
                <value>
                    <fullName>ACTIVE International</fullName>
                </value>
                <value>
                    <fullName>ACTIVE Net</fullName>
                </value>
                <value>
                    <fullName>ACTIVE Trainer</fullName>
                </value>
                <value>
                    <fullName>ACTIVEworks - Camps Lite</fullName>
                </value>
                <value>
                    <fullName>ACTIVEworks - Camps Plus</fullName>
                </value>
                <value>
                    <fullName>ACTIVEworks - Endurance</fullName>
                </value>
                <value>
                    <fullName>ACTIVEworks - Swimming</fullName>
                </value>
                <value>
                    <fullName>ACTIVEworks - Sports - Swimming</fullName>
                </value>
                <value>
                    <fullName>ACTIVEworks - Team Sports</fullName>
                </value>
                <value>
                    <fullName>AMM</fullName>
                </value>
                <value>
                    <fullName>Blue Bear</fullName>
                </value>
                <value>
                    <fullName>Blue Bear WebStore</fullName>
                </value>
                <value>
                    <fullName>Class</fullName>
                </value>
                <value>
                    <fullName>Class Hybrid</fullName>
                </value>
                <value>
                    <fullName>Digital Media - Brands</fullName>
                </value>
                <value>
                    <fullName>Digital Media - Orgs</fullName>
                </value>
                <value>
                    <fullName>EST</fullName>
                </value>
                <value>
                    <fullName>Event Director</fullName>
                </value>
                <value>
                    <fullName>Fairway</fullName>
                </value>
                <value>
                    <fullName>Fellowship One</fullName>
                </value>
                <value>
                    <fullName>GEN</fullName>
                </value>
                <value>
                    <fullName>Golf SOS</fullName>
                </value>
                <value>
                    <fullName>Jencess</fullName>
                </value>
                <value>
                    <fullName>League One</fullName>
                </value>
                <value>
                    <fullName>LibOnline</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <description>Product Type</description>
        <inlineHelpText>Product Type</inlineHelpText>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SaaS</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>Object to capture gross margin by Product Family and Product Type</description>
    <label>Gross Margin</label>
    <nameField>
        <label>Gross Margin Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gross Margins</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product_Family__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Gross_Margin__c</columns>
        <columns>Effective_Start_Date__c</columns>
        <columns>Effective_End_Date__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <validationRules>
        <fullName>GM_End_Date_Later_Than_Start_Date</fullName>
        <active>true</active>
        <description>The effective_end_date should be later than effective start date</description>
        <errorConditionFormula>Effective_Start_Date__c &gt; Effective_End_Date__c</errorConditionFormula>
        <errorDisplayField>Effective_End_Date__c</errorDisplayField>
        <errorMessage>The Effective End Date should be no earlier than Effective Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GM_Gross_Margin_Between_0_and_100</fullName>
        <active>true</active>
        <description>The Gross Margin should be in the range of 0 and 100</description>
        <errorConditionFormula>!(Gross_Margin__c &gt;= 0 &amp;&amp; Gross_Margin__c &lt;= 1)</errorConditionFormula>
        <errorDisplayField>Gross_Margin__c</errorDisplayField>
        <errorMessage>The Gross Margin should be in the range of 0 and 100 [since it is percent]</errorMessage>
    </validationRules>
</CustomObject>